# DistributedKVstore

p2/results/: election_timeout  latencies_basic
p2/scripts/: perf_benchmarker.py  setup.sh  throughput_calc.py  zipf_key_generator.py  zipfian_keys.csv  zipfian_keys_100k.csv
p2/src/: .gitignore  CMakeLists.txt  afs.proto  afs_client.cc  afs_client.hh  afs_server.cc  config.hh  db.proto  db_cleaner.cc  db_client.cc  db_client.hh  db_server.cc  run_filebench.py  timer.cc  timer.hh  unreliablefs.c  unreliablefs_ops.c  unreliablefs_ops.h  wrapper.cc  wrapper.h
results/: mean_latency  throughput
scripts/: setup.sh  zipf_key_generator.py  zipfian_keys.csv
src/: config.hh  db.proto  db_client.cc  db_client.hh  db_server.cc  timer.cc  timer.hh
